Bug 338549 - Context menu and Del key doesn't work when Dolphin restores session with split view enabled
Summary: Context menu and Del key doesn't work when Dolphin restores session with spli...
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: split view (other bugs)
Version First Reported In: 4.14.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-08-25 15:10 UTC by karaluh
Modified: 2014-08-31 15:05 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.14.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description karaluh 2014-08-25 15:10:06 UTC
As in summary.

Reproducible: Sometimes

Steps to Reproduce:
1. Open Dolphin and enable split view
2. Log out.
3. Log back in.
Actual Results:  
Del key and context menu (RMB) doesn't work in the restored Dolphin.
Comment 1 Emmanuel Pescosta 2014-08-25 16:56:03 UTC
Thanks, I can reproduce this bug.
Comment 2 Emmanuel Pescosta 2014-08-25 21:34:36 UTC
Only the stable branch 4.14 is affected by this bug.
Comment 3 Emmanuel Pescosta 2014-08-27 21:01:49 UTC
Review-Request: https://git.reviewboard.kde.org/r/119961/
Comment 4 Emmanuel Pescosta 2014-08-31 15:05:24 UTC
Git commit 13efd5950b4c6b017514325a0ce7bc13d9895c59 by Emmanuel Pescosta.
Committed on 27/08/2014 at 20:40.
Pushed by emmanuelp into branch 'KDE/4.14'.

Only keep the active view container connected with the main window, all inactive
view containers are disconnected. Changing the connections is done whenever the
active view has been changed, so we can always guarantee that the active view is
connected.

The problem with restoring saved sessions is, that we create a new view container
in DolphinTabPage::restoreState() when split view was used in the previous session,
but this view container isn't connected to the main window slots because
DolphinMainWindow::connectViewSignals() is not called for this container. This leads
to these strange problems: no context menu, ...
REVIEW: 119961
FIXED-IN: 4.14.1

M  +10   -12   dolphin/src/dolphinmainwindow.cpp

http://commits.kde.org/kde-baseapps/13efd5950b4c6b017514325a0ce7bc13d9895c59