Only keep the active view container connected with the main window, all inactive view containers are disconnected. Changing the connections is done whenever the active view has been changed, so we can always guarantee that the active view is connected.

The problem with restoring saved sessions is, that we create a new view container
in DolphinTabPage::restoreState() when split view was used in the previous session,
but this view container isn't connected to the main window slots because
DolphinMainWindow::connectViewSignals() is not called for this container. This leads
to these strange problems: no context menu, ...

BUG: 338549
REVIEW: 119961
FIXED-IN: 4.14.1